Lugosi.jj
PARSER_BEGIN(LugosiParser)
import java.io.*;
public class LugosiParser {
  public static void main(String args[]) throws ParseException, IOException {
    if (args.length == 0) {
      System.err.println("Uso: java LugosiParser arquivo.rs");
      return;
    }
    LugosiParser parser = new LugosiParser(new FileInputStream(args[0]));
    parser.Program();
    System.out.println("Parse completo.");
  }
}

PARSER_END(LugosiParser)

SKIP : { " " | "\t" | "\n" | "\r" }

TOKEN :
{
  <FN: "fn">
| <MAIN: "main">
| <LET: "let">
| <PRINTLN: "println!">
| <READ_FLOAT: "read_float">
| <F32: "f32">
| <BOOL_TYPE: "bool">
| <VOID_TYPE: "void">
| <ACHAVES: "{">
| <FCHAVES: "}">
| <SEMI: ";">
| <COLON: ":">
| <ASSIGN: "=">
| <ARROW: "->">
| <APARENTESES: "(">
| <FPARENTESES: ")">
| <IF: "if">
| <WHILE: "while">
| <RETURN: "return">
| <TRUE: "true">
| <FALSE: "false">
| <SUM: "+">
| <SUB: "-">
| <MULT: "*">
| <DIV: "/">
| <AND: "&&">
| <OR: "||">
| <MENOR: "<">
| <MAIOR: ">">
| <IGUAL: "==">
| <VIRGULA: ",">
}

TOKEN :
{
  <NUM: ( ["0"-"9"] )+ ( "." ( ["0"-"9"] )+ )? ( "E" ( "+" | "-" )? ( ["0"-"9"] )+ )?>
| <ID: ( ["a"-"z","A"-"Z"] ) ( ["a"-"z","A"-"Z","0"-"9"] )* ( "_" ( ["a"-"z","A"-"Z","0"-"9"] )+ )*>
}

void Program() : {}
{
  MainDecl() ( FuncDecl() )* <EOF>
}

void MainDecl() : {}
{
  <FN> <MAIN> <APARENTESES> <FPARENTESES> <ACHAVES>
    ( VarDecl() | Comando() )*
  <FCHAVES>
}

void FuncDecl() : {}
{
  <FN> <ID> <APARENTESES> [ ArgList() ] <FPARENTESES> <ARROW> Tipo() <ACHAVES>
    ( VarDecl() | Comando() )*
  <FCHAVES>
}

void VarDecl() : {}
{
  <LET> <ID> <COLON> Tipo() <SEMI>
}

void Tipo() : {}
{
    <F32>
  | <BOOL_TYPE>
  | <VOID_TYPE>
}

void ArgList() : {}
{
  Param() ( <VIRGULA> Param() )*
}

void Param() : {}
{
  <ID> <COLON> Tipo()
}

void Comando() : {}
{
    LOOKAHEAD( <ID> <ASSIGN> ) Atribuicao()
  | LOOKAHEAD( <ID> <APARENTESES> ) ChamadaStmt()
  | IfStmt()
  | WhileStmt()
  | ReturnStmt()
  | PrintlnStmt()
}

void Atribuicao() : {}
{
  <ID> <ASSIGN> ( <READ_FLOAT> <APARENTESES> <FPARENTESES> | Expr() ) <SEMI>
}

void ChamadaStmt() : {}
{
  <ID> <APARENTESES> [ ArgExprList() ] <FPARENTESES> <SEMI>
}

void IfStmt() : {}
{
  <IF> Expr() <ACHAVES> ( VarDecl() | Comando() )* <FCHAVES> <SEMI>
}

void WhileStmt() : {}
{
  <WHILE> Expr() <ACHAVES> ( VarDecl() | Comando() )* <FCHAVES> <SEMI>
}

void ReturnStmt() : {}
{
  <RETURN> Expr() <SEMI>
}

void PrintlnStmt() : {}
{
  <PRINTLN> Expr() <SEMI>
}

// Expressões com precedência: OR -> AND -> igualdade -> relação -> soma -> produto -> primário.
void Expr() : {}
{
  OrExpr()
}

void OrExpr() : {}
{
  AndExpr() ( <OR> AndExpr() )*
}

void AndExpr() : {}
{
  EqExpr() ( <AND> EqExpr() )*
}

void EqExpr() : {}
{
  RelExpr() ( <IGUAL> RelExpr() )*
}

void RelExpr() : {}
{
  AddExpr() ( ( <MENOR> | <MAIOR> ) AddExpr() )*
}

void AddExpr() : {}
{
  MulExpr() ( ( <SUM> | <SUB> ) MulExpr() )*
}

void MulExpr() : {}
{
  Primary() ( ( <MULT> | <DIV> ) Primary() )*
}

void ArgExprList() : {}
{
  Expr() ( <VIRGULA> Expr() )*
}

void Primary() : {}
{
    LOOKAHEAD( <ID> <APARENTESES> ) ChamadaExpr()
  | <ID>
  | <NUM>
  | <TRUE>
  | <FALSE>
  | <APARENTESES> Expr() <FPARENTESES>
}

void ChamadaExpr() : {}
{
  <ID> <APARENTESES> [ ArgExprList() ] <FPARENTESES>
}
